--- a/style.css
+++ b/style.css
@@ -1,17 +1,42 @@
 body {
-    background-color: rgb(84, 168, 216);
-    font-family: "Montserrat", sans-serif;
+    background-color: hwb(320 57% 3%) font-family: "Montserrat", sans-serif;
 }
+
 footer {
     background-color: rgba(255, 248, 248, 0.856);
-    color: rgb(247, 247, 247);
+    color: rgb(0, 0, 0);
     position: fixed;
     bottom: 0;
     width: 100%;
     height: 2rem;
 }
+
 footer p {
     text-align: center;
     font: 0.6rem;
     margin-top: 0.5rem;
+}
+
+.cartao {
+    margin: 1rem 1rem;
+    background-color: lch(60.16% 56.53 340.13);
+    height: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33% - 6rem);
+}
+
+.cartao_conteudo {
+    text-align: center;
+    background-color: hwb(320 57% 3%) height: 100%;
+}
+
+.cartao_conteudo h3 {
+    background-color: rgb(39, 8, 8);
+    color: aliceblue;
+    text-align: left;
+    padding: 0.5;
+    position: absolute;
+    margin: 0.6rem;
+    border-radius: 0.6rem;
+    font-size: 1vw;
 }
