--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
-    background-color: hsl(327, 77%, 76%) font-family: "Montserrat", sans-serif;
+    background-color: url("img/bg-desktop.webp");
+    font-family: "Montserrat", sans-serif;
 }
 
 footer {
-    background-color: rgba(241, 133, 133, 0.856);
+    background-color: hwb(327 58% 5%);
     color: rgb(0, 0, 0);
     position: fixed;
     bottom: 0;
@@ -31,7 +32,8 @@ footer p {
 
 .cartao_conteudo {
     text-align: center;
-    background-color: hwb(321 58% 5%) height: 100%;
+    background-color: hwb(321 58% 5%)
+    height 100%;
 }
 
 .cartao_conteudo h3 {
@@ -43,4 +45,9 @@ footer p {
     margin: 0.6rem;
     border-radius: 0.6rem;
     font-size: 2vw;
+}
+:root {
+    --text-color: #DBE4EF;
+    --card-front-color: #144480;
+    --card-back-color: #00F4BF;
 }
