--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: url("img/bg-desktop.webp");
+    background: url("img/bg-desktop.webp");
     font-family: "Montserrat", sans-serif;
 }
 
@@ -24,7 +24,7 @@ footer p {
 
 .cartao {
     margin: 1rem 1rem;
-    background-color: hwb(320 57% 3%);
+    background-color: aqua;
     height: 20rem;
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
@@ -33,7 +33,9 @@ footer p {
 .cartao_conteudo {
     text-align: center;
     background-color:var(--card-front-color);
-    height:100%
+    height:100%;
+    transform-style: preserve-3d;
+    transition: transform 300ms ease-in-out;
 }
 
 .cartao_conteudo h3 {
@@ -45,10 +47,39 @@ footer p {
     margin: 0.6rem;
     border-radius: 0.6rem;
     font-size: 2vw;
+    backface-visibility: hidden;
 }
 
 :root {
     --text-color: #DBE4EF;
     --card-front-color: #144480;
     --card-back-color: #00F4BF;
+}
+
+.cartao_conteudo_pergunta p {
+    color: var(--text-color);
+    font-weight: 500;
+}
+
+.cartao_conteudo_resposta p {
+    color:var(--card-back-color);
+    font-weight: 700;
+}
+.cartao:hover .cartao_conteudo {
+    transform: rotateY(180deg);
+}
+
+.cartao_conteudo_pergunta, .cartao_conteudo_resposta {
+    backface-visibility: hidden;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+.cartao_conteudo_pergunta{
+    transform: rotateY(180deg);
+}
+.cartao_conteudo p {
+    margin: 1rem;
+    padding: 2rem;
+    margin-top: 4rem;
 }
