--- a/style.css
+++ b/style.css
@@ -27,16 +27,10 @@ footer p {
 }
 
 .cartao {
-     display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  border: 1px solid #000;
-  font-size: 48px;
-  min-width: 100px; 
-  min-height: 100px;  
-  text-align: center;
-  word-wrap: break-word;
+    margin: 1rem 1rem;
+    background-color: rgb(112, 194, 241);
+    display: inline-flex;
+    justify-content: center;
 }
 
 .cartao_conteudo {
